# MLOps

./: .gitignore  LICENSE  README.md  backup.py  db_backup.ipynb  db_examples.ipynb  distant_S3.ipynb  docker-compose.yml  dockerfile  install.sh  main.ipynb  main.py  pyproject.toml  requirements.txt  scheduler.py  scrapping.ipynb  sentiment_analysis.ipynb  sentiment_analysis.py
.github/workflows/: dep.yaml  deploy.yaml  test.yaml
Streamlit/: streamlit.py
data/sample/: movies.csv  reviews_raw.csv  reviews_sentiments.csv
install/: db_init.ipynb  requirements.txt
notebooks/: db_admin_tools.ipynb  db_examples.ipynb  db_init.ipynb  db_tools.ipynb  legacy.ipynb  main.ipynb  scrapping.ipynb  sentiment_analysis.ipynb
setup/: .env.template  chrome.sh  db_init.py  requirements.txt
src/: analysis.py  backup.py  manage_movies.py  scrapping.py
src/utils/: add_movie.py  db.py  logger.py  manage_movies.py  s3.py
test/: backend_test.py  backup_test.py  connection_test.py
tests/: connection_test.py
